audio page overflow fix

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -827,6 +827,6 @@ header .entry-meta {
 	padding: 0;
 }
 .jp-audio {
-	overflow: auto;
+	overflow: hidden;
 	display: block;
 }
